--- a/config/perlcritic.ini
+++ b/config/perlcritic.ini
@@ -27,6 +27,7 @@ top       = 1000
 [InputOutput::RequireCheckedClose]
 [InputOutput::RequireCheckedOpen]
 [InputOutput::RequireCheckedSyscalls]
+exclude_functions = print say
 
 [Miscellanea::ProhibitFormats]
 
